--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python Debugger: Current File with Arguments",
       "type": "debugpy",
       "request": "launch",
-      "program": "/Users/wgmlgz/csa-lab3/src/main.py",
+      "program": "./src/main.py",
       "console": "integratedTerminal",
       "args": "./examples/sus/test.lsp -c -d -r"
     },
