--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,13 +6,13 @@ on:
       - main
     paths:
       - ".github/workflows/*"
-      - "python/**"
+      - "src/**"
   pull_request:
     branches:
       - main
     paths:
       - ".github/workflows/*"
-      - "python/**"
+      - "src/**"
 
 defaults:
   run:
